--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
             <h1>Toasted Robotics</h1>
         </div>
         <div class="content">
-            <div style="grid-column: 1; grid-row: 1;">
-                <h2>Competitive High School VRC Robotics Team</h2>
+            <div style="grid-column: 1/3; grid-row: 1; z-index: 0; display: grid; grid-template-columns: 1fr 1fr; grid-template-rows: 2fr; background-image: url('./static/images/arena.png'); background-repeat: no-repeat; background-position: center center;">
+                <div style="grid-column: 1; grid-row: 1; color:white;">
+                    <h2>Competitive High School VRC Robotics Team</h2>
+                </div>
+                <div style="grid-column: 2; grid-row: 1;">
+                    <img src="./static/images/arms_up_strafe.png" style="max-width: 100%; height: auto; width: 200px;">
+                </div>
             </div>
-            <div style="grid-column: 2; grid-row: 1;">
-                <img src="./static/images/giorno_figure.png" style="max-width: 100%; height: auto; width: 200px;">
-            </div>
+            
             <div style="grid-column: 1/3; grid-row: 2; grid-template-columns: 1fr 1fr; display: grid;">
                 <div style="grid-column: 1;">
                     <h3>Donations</h3>
