--- a/login.html
+++ b/login.html
@@ -26,10 +26,10 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="header">
-            <h1>Login to Bank of Joruno</h1>
+        <div class="navbar" style="grid-row: 1;"></div>
+        <div class="header" style="grid-row:2;">
+            <h1>Login to Toasted Robotics</h1>
         </div>
-        <div class="navbar" style="grid-row: 2;"></div>
         <div id="background" style="background-color:rgba(250, 250, 250, 0.295); border: 1px solid black; width:50%; margin: 0 auto;"></div>
         <div id="firebaseui-auth-container" style="display:block; margin: 0 auto; padding-top: 45px; height:200px !important;"></div>
         <div id="loader">Loading...</div>
