--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login | Bank of Joruno</title>
+    <title>Toasted Robotics | Login</title>
     <!-- <link href="./static/portable.css" media="screen and (max-aspect-ratio: 5/6)" rel="stylesheet"> -->
 	<link href="./static/desktop.css" media="screen and (min-aspect-ratio: 5/6)" rel="stylesheet">
 	<link rel="shortcut icon" href="../static/images/icon.ico">
