--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
         </div>
         <div class="content">
             <div style="grid-column: 1/3; grid-row: 1; z-index: 0; display: grid; grid-template-columns: 1fr 1fr; grid-template-rows: 2fr; background-image: url('./static/images/arena.png'); background-repeat: no-repeat; background-position: center center;">
-                <div style="grid-column: 1; grid-row: 1; color:white;">
-                    <h2>Competitive High School VRC Robotics Team</h2>
+                <div style="grid-column: 1; grid-row: 1; color:white; background-color: rgba(85, 85, 85, 0.322);">
+                    <div id="competitive">
+                        <h2 style="padding-top: 50px; font-size: 30px;">Competitive High School VRC Robotics Team</h2>
+                    </div>
                 </div>
-                <div style="grid-column: 2; grid-row: 1;">
+                <div style="grid-column: 2; grid-row: 1;background-color: rgba(85, 85, 85, 0.322);">
                     <img src="./static/images/arms_up_strafe.png" style="max-width: 100%; height: auto; width: 200px;">
                 </div>
             </div>
