--- a/footer.html
+++ b/footer.html
@@ -15,7 +15,7 @@
             </div>
             <div id="footer">
                 <h3>Follow our social media.</h3>
-                <p>Twitter<br>Facebook<br>Instagram</p>
+                <p>Youtube - Toasted Robotics<br>Instagram - @toastedrobotics</p>
             </div>
             <div id="footer">
                 <h3>Careers</h3>
