--- a/footer.html
+++ b/footer.html
@@ -18,8 +18,8 @@
                 <p>Youtube - Toasted Robotics<br>Instagram - @toastedrobotics</p>
             </div>
             <div id="footer">
-                <h3>Careers</h3>
-                <p>Want to join our team? <br>Check out our <strong>Job Listings</strong> page.</p>
+                <h3>Sponsor</h3>
+                <p>Want to <b>sponsor</b> our team? <br>Check out our <strong>contact</strong> page.</p>
             </div>
         </div>
     </div>
