--- a/navbar.html
+++ b/navbar.html
@@ -15,7 +15,7 @@
 		
 		<div class="navbar" id="nav">
 			<ul class="nav">
-				<li id="home" class="active"><a href="../index.html" style=" font-style:bold; font-family:'Sulphur Point', sans-serif;"><img src="../static/images/giorno_minimal_icon.png" height="60px" width="60px"></a></li>
+				<li id="home" class="active"><a href="../index.html" style=" font-style:bold; font-family:'Sulphur Point', sans-serif;"><img src="../static/images/favicon.ico" height="60px" width="60px"></a></li>
 				<li id="home" style="padding-top:12px;"><a href="../index.html">Toasted Robotics</a></li>
 				<a href="javascript:void(0);" class="icon" onclick="myFunction()"><img src="https://cdn.discordapp.com/attachments/642547206275989527/665023672775606323/LcK7kdpki.png" width="20px" height="20px"></a>
 				<div id="mobile">
