--- a/navbar.html
+++ b/navbar.html
@@ -7,7 +7,7 @@
 	<link href="../static/nav-mobile.css" media="screen and (max-aspect-ratio: 5/6)" rel="stylesheet">
 	<link href="../static/nav.css" media="screen and (min-aspect-ratio: 5/6)" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Sulphur+Point&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet"> -->
 	<link href="https://fonts.googleapis.com/css2?family=Geo&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" href="../static/images/favicon.ico">
 </head>
