--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
            
         </div>
         <div class="content">
-            <div id="backgroundpic" style="grid-column: 1/3; grid-row: 1; z-index: 0; display: grid; grid-template-columns: 1fr 1fr; grid-template-rows: 2fr; background-image: url('../static/images/field.png'); background-repeat: no-repeat; background-position: center center; background-attachment: fixed; background-size: cover;">
+            <div id="backgroundpic" style="grid-column: 1/3; grid-row: 1; z-index: 0; display: grid; grid-template-columns: 1fr 1fr; grid-template-rows: 2fr; background-image: url('../static/images/field.PNG'); background-repeat: no-repeat; background-position: center center; background-attachment: fixed; background-size: cover;">
                 <div style="grid-column: 1; grid-row: 1; color:white; background-color: rgba(85, 85, 85, 0.322);">
                     <div id="competitive">
                         <h2 style="padding-top: 170px; font-size: 40px; text-shadow: 5px 5px 2px#3f3f3fa6;">Competitive High School VRC Robotics Team</h2>
