--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
             <div id="backgroundpic" style="grid-column: 1/3; grid-row: 1; z-index: 0; display: grid; grid-template-columns: 1fr 1fr; grid-template-rows: 2fr; background-image: url('../static/images/field.PNG'); background-repeat: no-repeat; background-position: center center; background-attachment: fixed; background-size: cover;">
                 <div style="grid-column: 1; grid-row: 1; color:white; background-color: rgba(85, 85, 85, 0.322);">
                     <div id="competitive">
-                        <h2 style="padding-top: 170px; font-size: 40px; text-shadow: 5px 5px 2px#3f3f3fa6;">Competitive High School VRC Robotics Team</h2>
+                        <h2 style="padding-left: 10%; padding-top: 130px; font-size: 45px; text-shadow: 5px 5px 2px#3f3f3fa6; text-align: left;">Competitive<br> High School<br> VRC Robotics Team</h2>
                     </div>
                 </div>
                 <div style="grid-column: 2; grid-row: 1;background-color: rgba(85, 85, 85, 0.322); ">
                     <!-- <div id="floating"><img src="./static/images/favicon.ico"></div> -->
+                    <h2 style="padding-right: 10%; padding-top: 130px; font-size: 37px; text-shadow: 5px 5px 2px#3f3f3fa6; text-align: right; color:white;">Excellence (69)<br>Design (666)<br>Tournament Champ (420)</h2>
                 </div>
             </div>
             
