--- a/navbar.html
+++ b/navbar.html
@@ -10,6 +10,16 @@
 	<!-- <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet"> -->
 	<link href="https://fonts.googleapis.com/css2?family=Geo&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" href="../static/images/favicon.ico">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-167500695-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-167500695-1');
+	</script>
+
 </head>
 <body>
 		<div class="navbar" id="nav">
