--- a/login_legacy.html
+++ b/login_legacy.html
@@ -28,7 +28,7 @@
         <div id="input">
             <input id="txtEmail" type="email" required placeholder=" email">
         </div>
-        <div style="grid-row: 2; grid-column: 1;"><h2 id="user" class="hide"></h2></div>
+        <!-- <div style="grid-row: 2; grid-column: 1;"><h2 id="user" class="hide"></h2></div> -->
         <div id="input2">
             <input id="txtPassword" name="password" type="password" placeholder=" password">
         </div>
