--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="navbar"></div>
         <div class="welcome">
             <div id="textlogo">
-                <h1 id="textlogoname">Toasted Robotics</#h1>
+                <h1 id="textlogoname">Toasted Robotics</h1>
             </div>
            
         </div>
