--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="../static/images/favicon.ico">
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-auth.js"></script>
-    <script src="./static/firebase.js"></script> 
+    <script src="../static/firebase.js"></script> 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 	<script>
 		$(function(){
