--- a/pages/about.html
+++ b/pages/about.html
@@ -26,7 +26,7 @@
     <div id="mask"></div>
     <div class="wrapper" id="wrapper">
         <div id="login-modal" class="hide">
-            <iframe src="./login_legacy.html" frameBorder="0" id="frame" scrolling="no" width="100%" style="height:100%; width: 710px;"></iframe>
+            <iframe src="../login_legacy.html" frameBorder="0" id="frame" scrolling="no" width="100%" style="height:100%; width: 710px;"></iframe>
         </div>
         <div id="page-mask" class="hide" onclick="removeHide()"></div>
 		<div class="navbar"></div>
