--- a/pages/about.html
+++ b/pages/about.html
@@ -20,6 +20,7 @@
     </script>
     <script src="../static/legacy.js"></script>
 	<script src="../static/main.js"></script>
+	<script src="../static/loader.js"></script>
 </head>
 <body>
     <div id="preload"></div>
