hidden login button

--- a/navbar.html
+++ b/navbar.html
@@ -33,7 +33,7 @@
 						<li id="mobile"><a href="../pages/contact.html">Contact</a></li>	
 					</div>
 					<div id="right">
-						<button id="login-nav" style="margin-top: 18px; float:right; margin-right: 20%; background-color: white;" onclick="removeHide()">Account</button>
+						<!-- <button id="login-nav" style="margin-top: 18px; float:right; margin-right: 20%; background-color: white;" onclick="removeHide()">Account</button> -->
 					</div>
 				</div>
 			</ul> 
