--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
                 </div>
             </div>
             
-            <div style="grid-column: 1/3; background-attachment: fixed; background-image: url('./static/images/Aesthetic Bots blurred.png'); background-repeat: no-repeat; background-position: center center; background-size: cover;"></div>
-            
+            <div style="grid-column: 1/3; background-attachment: fixed; background-image: url('./static/images/arena3.png'); background-repeat: no-repeat; background-position: center center; background-size: cover;"></div>
         </div>
         <div class="foot"></div>
     </div>
