--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
     </script>
 </head>
 <body>
-    <div id="preload"></div>
-    <div id="mask"></div>
+    <div id="mask">
+        <div id="preload"></div>
+    </div>
     <div class="wrapper" id="wrapper">
         <div id="login-modal" class="hide">
             <iframe src="./login_legacy.html" frameBorder="0" id="frame" scrolling="no" width="100%" style="height:100%; width: 710px;"></iframe>
