--- a/pages/about.html
+++ b/pages/about.html
@@ -26,7 +26,7 @@
     <div id="mask">
         <div id="preload"></div>
     </div>
-    <div class="wrapper" id="wrapper" style="grid-template-rows: 120px 100px 3400px 1fr !important;">
+    <div class="wrapper" id="wrapper" style="grid-template-rows: 120px 100px 3000px 1fr !important;">
         <div id="login-modal" class="hide">
             <iframe src="../login_legacy.html" frameBorder="0" id="frame" scrolling="no" width="100%" style="height:100%; width: 710px;"></iframe>
         </div>
@@ -56,23 +56,34 @@
                     <h3 style="text-align: left; font-size: 40px; margin: 0 auto; padding-top: 20px;">Mission</h3>
                     <p style="text-align: left; font-size: 20px; margin:0 auto;">We provide young Canadians with opportunities to excel in the STEM field through the VEX platform.</p>
                 </div>
-                <div style="grid-column: 3/5; grid-row: 3; padding-left: 5vw; border-radius: 45px;background: linear-gradient(to left, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0));">
+                <div style="padding-left: 5vw; grid-column: 3/5; grid-row: 3/5; border-radius: 45px;background: linear-gradient(to left, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)); margin-top: 40px; margin-bottom: 90px;">
                     <h3 style="text-align: left; font-size: 40px; margin: 0 auto; padding-top: 10px;">Vision</h3>
                     <p style="text-align: left; font-size: 20px; margin:0 auto;">To be a significant organization in the VEX community which provides exemplary robotics education to the Greater Calgary region, and empowers Canadians of all backgrounds.</p>
                 </div>
             </div>
-            <div style="grid-column: 1/3; grid-row: 4; display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr; grid-template-rows: 140px 3fr 1fr;">
-                <h1 style="text-align: center; padding-top: 20px; font-size: 44px; border-bottom: 2px solid rgb(35, 39, 42); grid-column: 3/4; grid-row: 1/2;">Our Values</h1>
-                <div style="grid-column: 2/5; grid-row: 2/3; display:grid; grid-template-rows: 1fr 1fr 1fr 1fr 1fr; grid-template-columns: 2fr 1fr 2fr;">
+            <div style="grid-column: 1/3; grid-row: 4; display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr; grid-template-rows: 150px 100px 3fr 100px;  color:rgb(35, 39, 42)">
+                <h1 style="text-align: center; padding:10px; font-size: 2.8em; border: 10px solid rgb(8, 8, 8); grid-column: 3/4; grid-row: 1; color:rgb(255, 255, 255); background-color: rgb(35, 39, 42);">Our Values</h1>
+                <div style="grid-column: 2/5; grid-row: 3; display:grid; grid-template-rows: 1fr 1fr 1fr 1fr 1fr; grid-template-columns: 2fr 1fr 2fr;">
                     <div style="grid-row: 1; grid-column: 1; text-align: left;">
-                        <h1>Community</h1>
+                        <h1 style="border-bottom: 4px solid rgb(15, 136, 240); display: inline;">&nbsp;&nbsp;COMMUNITY&nbsp;&nbsp;</h1>
                         <p>We strive to give back and our community (Calgary and surrounding area) and to pass knowledge forward.  This is usually in the form of volunteering, tips and suggestions both in-person and online (Discord and Instagram), the publishing of mechanisms, and through our involvement in the creation of strategies and designs in the VEX community.</p>
                     </div>
                     <div style="grid-row: 2; grid-column: 3; text-align: right;">
-                        <h1>Excellence</h1>
+                        <h1 style="border-bottom: 4px solid rgb(15, 136, 240); display: inline;">&nbsp;&nbsp;EXCELLENCE&nbsp;&nbsp;</h1>
                         <p>We set high expectations and hold all our teammates to the highest standard.  We apply our diverse skill sets to the best of our ability and aim to both out-work and out-perform the competition.</p>
                     </div>
-
+                    <div style="grid-row: 3; grid-column: 1; text-align: left;">
+                        <h1 style="border-bottom: 4px solid rgb(15, 136, 240); display: inline;">&nbsp;&nbsp;RESPECT&nbsp;&nbsp;</h1>
+                        <p>The VEX community is built on trust, acceptance, tolerance, and respect.  Our team prides itself on our respect and acknowledgement for both competitors, teammates, suppliers, and mentors.  We emphasize the positive representation of our community, sponsors, and organization at all events we attend.</p>
+                    </div>
+                    <div style="grid-row: 4; grid-column: 3; text-align: right;">
+                        <h1 style="border-bottom: 4px solid rgb(15, 136, 240); display: inline;">&nbsp;&nbsp;TEAMWORK&nbsp;&nbsp;</h1>
+                        <p>Building good relationships with our team members is very important to us.  We focus on team building and trust by bringing together like-minded, driven, and motivated individuals.  Being friends on and off the field is essential to our team.</p>
+                    </div>
+                    <div style="grid-row: 5; grid-column: 1; text-align: left;">
+                        <h1 style="border-bottom: 4px solid rgb(15, 136, 240); display: inline;">&nbsp;&nbsp;WORK ETHIC&nbsp;&nbsp;</h1>
+                        <p>Knowledge is nothing without motivation, and our team prides ourselves on our determination, work ethic, and motivation.  We inspire others with our focus and drive, as well as help motivate our teammates, peers, and community.</p>
+                    </div>
                 </div>
             </div>
         </div>
