--- a/pages/about.html
+++ b/pages/about.html
@@ -65,23 +65,23 @@
                 <h1 style="text-align: center; padding:10px; font-size: 2.8em; border: 10px solid rgb(8, 8, 8); grid-column: 3/4; grid-row: 1; color:rgb(255, 255, 255); background-color: rgb(35, 39, 42);">Our Values</h1>
                 <div style="grid-column: 2/5; grid-row: 3; display:grid; grid-template-rows: 1fr 1fr 1fr 1fr 1fr; grid-template-columns: 2fr 1fr 2fr;">
                     <div style="grid-row: 1; grid-column: 1; text-align: left;">
-                        <h1 style="border-bottom: 4px solid rgb(15, 136, 240); display: inline;">&nbsp;&nbsp;COMMUNITY&nbsp;&nbsp;</h1>
+                        <h1 id="valuesH1">&nbsp;&nbsp;COMMUNITY&nbsp;&nbsp;</h1>
                         <p>We strive to give back and our community (Calgary and surrounding area) and to pass knowledge forward.  This is usually in the form of volunteering, tips and suggestions both in-person and online (Discord and Instagram), the publishing of mechanisms, and through our involvement in the creation of strategies and designs in the VEX community.</p>
                     </div>
                     <div style="grid-row: 2; grid-column: 3; text-align: right;">
-                        <h1 style="border-bottom: 4px solid rgb(15, 136, 240); display: inline;">&nbsp;&nbsp;EXCELLENCE&nbsp;&nbsp;</h1>
+                        <h1 id="valuesH1">&nbsp;&nbsp;EXCELLENCE&nbsp;&nbsp;</h1>
                         <p>We set high expectations and hold all our teammates to the highest standard.  We apply our diverse skill sets to the best of our ability and aim to both out-work and out-perform the competition.</p>
                     </div>
                     <div style="grid-row: 3; grid-column: 1; text-align: left;">
-                        <h1 style="border-bottom: 4px solid rgb(15, 136, 240); display: inline;">&nbsp;&nbsp;RESPECT&nbsp;&nbsp;</h1>
+                        <h1 id="valuesH1">&nbsp;&nbsp;RESPECT&nbsp;&nbsp;</h1>
                         <p>The VEX community is built on trust, acceptance, tolerance, and respect.  Our team prides itself on our respect and acknowledgement for both competitors, teammates, suppliers, and mentors.  We emphasize the positive representation of our community, sponsors, and organization at all events we attend.</p>
                     </div>
                     <div style="grid-row: 4; grid-column: 3; text-align: right;">
-                        <h1 style="border-bottom: 4px solid rgb(15, 136, 240); display: inline;">&nbsp;&nbsp;TEAMWORK&nbsp;&nbsp;</h1>
+                        <h1 id="valuesH1">&nbsp;&nbsp;TEAMWORK&nbsp;&nbsp;</h1>
                         <p>Building good relationships with our team members is very important to us.  We focus on team building and trust by bringing together like-minded, driven, and motivated individuals.  Being friends on and off the field is essential to our team.</p>
                     </div>
                     <div style="grid-row: 5; grid-column: 1; text-align: left;">
-                        <h1 style="border-bottom: 4px solid rgb(15, 136, 240); display: inline;">&nbsp;&nbsp;WORK ETHIC&nbsp;&nbsp;</h1>
+                        <h1 id="valuesH1">&nbsp;&nbsp;WORK ETHIC&nbsp;&nbsp;</h1>
                         <p>Knowledge is nothing without motivation, and our team prides ourselves on our determination, work ethic, and motivation.  We inspire others with our focus and drive, as well as help motivate our teammates, peers, and community.</p>
                     </div>
                 </div>
