--- a/pages/about.html
+++ b/pages/about.html
@@ -24,7 +24,7 @@
     <div class="wrapper" id="wrapper" style="grid-template-rows: 120px 100px 3000px 1fr !important;">
         <div id="page-mask" class="hide" onclick="removeHide()"></div>
 		<div class="navbar"></div>
-		<div style="grid-column: 2;"><h1 style="text-align: center; font-size: 50px; margin: 0 auto;">About Us</h1></div>
+		<div style="grid-column: 2; height:100%;"><h1 style="text-align: center; font-size: 5vh; margin: 0 auto;">About Us</h1></div>
         <div class="content">
             <div id="backgroundpic" style="grid-column: 1/3; grid-row: 1; z-index: 0; display: grid; grid-template-columns: 1fr 1fr; grid-template-rows: 2fr; background-image: url('../static/images/with 221w.jpg'); background-repeat: no-repeat; background-position: top center; background-attachment: scroll; background-size: cover;">
                 <div style="grid-column: 1; grid-row: 1; color:white; background-color: rgba(85, 85, 85, 0.322);">
@@ -39,10 +39,10 @@
             
             <div style="grid-column: 1/3; grid-row: 2; grid-template-columns: 1fr 3fr 1fr; display: grid; grid-template-rows: 1fr 1fr;">
                 <div style="grid-column: 2/3; grid-row: 1/3; display: grid; grid-template-columns: 3fr 1fr 2fr;">
-                    <p style="grid-column:1; padding-top: 80px; text-align: left; color: rgb(35, 39, 42); font-size: 1.5em; text-indent: 2em;">Toasted Robotics (2405T) is a high performance, Calgary-based VRC team.  Our team consists of six 10th grade students from Sir Winston Churchill High School.  Formed in 2019 under the team number 3388A, Our team was based on the need for higher performance and greater opportunities, which were not readily achievable at our previous organization.  This year, we plan on ranking top 3 in Alberta and qualifying for the World Championships.  In addition to this, we are aiming to place in the top 100 worldwide in combined skills.  We plan on attending tournaments in Alberta and BC.  Overall, we plan on becoming a VRC oriented organization based in Alberta which will help to mentor and provide resources for younger students interested in STEM and robotics.</p>
+                    <p style="grid-column:1; padding-top: 8vh; text-align: left; color: rgb(35, 39, 42); font-size: 2.46vh; text-indent: 2em;">Toasted Robotics (2405T) is a high performance, Calgary-based VRC team.  Our team consists of six 10th grade students from Sir Winston Churchill High School.  Formed in 2019 under the team number 3388A, Our team was based on the need for higher performance and greater opportunities, which were not readily achievable at our previous organization.  This year, we plan on ranking top 3 in Alberta and qualifying for the World Championships.  In addition to this, we are aiming to place in the top 100 worldwide in combined skills.  We plan on attending tournaments in Alberta and BC.  Overall, we plan on becoming a VRC oriented organization based in Alberta which will help to mentor and provide resources for younger students interested in STEM and robotics.</p>
                     <div style="grid-column:3;">
                         <img src="../static/images/3388a and 3388f.png" style="max-width:100%; height:auto; margin-top: 10vh; border: 10px solid rgb(35, 39, 42);">
-                        <p>2405T(3388A) with 3388F</p>
+                        <p style="font-size: 2vh;">2405T(3388A) with 3388F</p>
                     </div>
                 </div>
             </div>
