--- a/pages/about.html
+++ b/pages/about.html
@@ -21,11 +21,11 @@
     <div id="mask">
         <div id="preload"></div>
     </div>
-    <div class="wrapper" id="wrapper" style="grid-template-rows: 120px 100px 3000px 1fr !important;">
+    <div class="wrapper" id="wrapper" style="grid-template-rows: 120px 100px auto auto !important">
         <div id="page-mask" class="hide" onclick="removeHide()"></div>
 		<div class="navbar"></div>
 		<div style="grid-column: 2; height:100%;"><h1 style="text-align: center; font-size: 5vh; margin: 0 auto;">About Us</h1></div>
-        <div class="content">
+        <div class="content" style="grid-template-rows: 1fr 1.5fr 1fr 3fr !important;">
             <div id="backgroundpic" style="grid-column: 1/3; grid-row: 1; z-index: 0; display: grid; grid-template-columns: 1fr 1fr; grid-template-rows: 2fr; background-image: url('../static/images/with 221w.jpg'); background-repeat: no-repeat; background-position: top center; background-attachment: scroll; background-size: cover;">
                 <div style="grid-column: 1; grid-row: 1; color:white; background-color: rgba(85, 85, 85, 0.322);">
                     <div id="competitive">
@@ -48,17 +48,17 @@
             </div>
             
             <div style="color: white; grid-column: 1/3; background-attachment: fixed; background-image: url('../static/images/Scouting.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover;  grid-template-columns: 1fr 2fr 2fr 2fr 1fr; display: grid; grid-template-rows: 1fr 1fr 1fr 1fr;">
-                <div style="padding-left: 1.5vw; grid-column: 2/4; grid-row: 2; border-radius: 38px; background: linear-gradient(to right, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)); margin-bottom: 10px;">
-                    <h3 style="text-align: left; font-size: 40px; margin: 0 auto; padding-top: 20px;">Mission</h3>
-                    <p style="text-align: left; font-size: 20px; margin:0 auto;">We provide young Canadians with opportunities to excel in the STEM field through the VEX platform.</p>
+                <div style="padding-left: 1.5vw; grid-column: 2/4; grid-row: 2; border-radius: 3.8vmin; background: linear-gradient(to right, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)); margin-bottom: 1vmin;">
+                    <h3 style="text-align: left; font-size: 4vmin; margin: 0 auto; padding-top: 3vmin;">Mission</h3>
+                    <p style="text-align: left; font-size: 2vmin; margin:0 auto;">We provide young Canadians with opportunities to excel in the STEM field through the VEX platform.</p>
                 </div>
-                <div style="padding-left: 5vw; grid-column: 3/5; grid-row: 3/5; border-radius: 38px;background: linear-gradient(to left, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)); margin-top: 40px; margin-bottom: 90px;">
-                    <h3 style="text-align: left; font-size: 40px; margin: 0 auto; padding-top: 10px;">Vision</h3>
-                    <p style="text-align: left; font-size: 20px; margin:0 auto;">To be a significant organization in the VEX community which provides exemplary robotics education to the Greater Calgary region, and empowers Canadians of all backgrounds.</p>
+                <div style="padding-left: 5vw; grid-column: 3/5; grid-row: 3/5; border-radius: 3.8vmin;background: linear-gradient(to left, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)); margin-top: 4vmin; margin-bottom: 9vmin;">
+                    <h3 style="text-align: left; font-size: 4vmin; margin: 0 auto; padding-top: 2vmin;">Vision</h3>
+                    <p style="text-align: left; font-size: 2vmin; margin:0 auto;">To be a significant organization in the VEX community which provides exemplary robotics education to the Greater Calgary region, and empowers Canadians of all backgrounds.</p>
                 </div>
             </div>
-            <div style="grid-column: 1/3; grid-row: 4; display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr; grid-template-rows: 150px 100px 3fr 100px;  color:rgb(35, 39, 42)">
-                <h1 style="text-align: center; padding:10px; font-size: 2.8em; border: 10px solid rgb(8, 8, 8); grid-column: 3/4; grid-row: 1; color:rgb(255, 255, 255); background-color: rgb(35, 39, 42);">Our Values</h1>
+            <div style="grid-column: 1/3; grid-row: 4; display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr; grid-template-rows: 150px 100px 3fr 100px;  color:rgb(35, 39, 42); font-size: 1.7vmin;">
+                <h1 style="text-align: center; padding: 1vmin; font-size: 4.5vmin; border: 1vmin solid rgb(8, 8, 8); grid-column: 3/4; grid-row: 1; color: rgb(255, 255, 255); background-color: rgb(35, 39, 42);">Our Values</h1>
                 <div style="grid-column: 2/5; grid-row: 3; display:grid; grid-template-rows: 1fr 1fr 1fr 1fr 1fr; grid-template-columns: 2fr 1fr 2fr;">
                     <div style="grid-row: 1; grid-column: 1; text-align: left;">
                         <h1 id="valuesH1">&nbsp;&nbsp;COMMUNITY&nbsp;&nbsp;</h1>
