--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,17 +18,17 @@
     <script src="../static/loader.js"></script>
 </head>
 <body>
-    <div id="mask">
+    <div id="mask" style="z-index: 2;">
         <div id="preload"></div>
     </div>
-    <div class="wrapper" id="wrapper" style="grid-template-rows: 120px 100px auto auto !important">
+    <div class="wrapper" id="wrapper" style="grid-template-rows: 70px auto auto !important">
         <div id="page-mask" class="hide" onclick="removeHide()"></div>
-        <div class="navbar"></div>
-        <div style="grid-column: 2; height:20vmin;"><h1 style="text-align: center; font-size: 5vmin; margin: 0 auto;">Contact</h1></div>
-        <div class="content" style="grid-template-rows: .7fr 1.6fr !important;">
-            <div id="backgroundpic" style="grid-column: 1/3; grid-row: 1; z-index: 0; display: grid; grid-template-columns: 1fr 1fr; grid-template-rows: 2fr; background-image: url('../static/images/field.PNG'); background-repeat: no-repeat; background-position: center center; background-attachment: fixed; background-size: cover;">
+        <div class="navbar" style="z-index: 1;"></div>
+        <div class="content" style="grid-template-rows: 1fr 1.6fr !important;">
+            <div id="backgroundpic" style="grid-column: 1/3; grid-row: 1; z-index: 0; display: grid; grid-template-columns: 1fr 1fr; grid-template-rows: 2fr; background-image: url('../static/images/arm gear.png'); background-repeat: no-repeat; background-position: center center; background-attachment: fixed; background-size: cover;">
                 <div style="grid-column: 1; grid-row: 1; color:white; background-color: rgba(85, 85, 85, 0.322);">
                     <div id="competitive">
+                        <h1 style="padding-left: 10%; padding-top: 140px; font-size: 10vmin; text-shadow: 3px 3px 2px#3f3f3fa6; text-align: left;">CONTACT US</h1>
                     </div>
                 </div>
                 <div style="grid-column: 2; grid-row: 1;background-color: rgba(85, 85, 85, 0.322); ">
