--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
         });
     </script>
     <script>
+        function enableScrollBars() {
+            document.documentElement.style.overflow = 'auto';
+            document.body.scroll = "yes";
+        }
+        function disableScrollBars() {
+            document.documentElement.style.overflow = 'hidden';
+            document.body.scroll = "no";
+        }
         window.addEventListener('load', function loader(){
+            disableScrollBars();
             console.log("loaded");
             console.time("Load Time");
             const preload = document.getElementById("preload");
@@ -30,7 +39,7 @@
                     function hideMask(){
                         mask.classList.add("hide");
                     }
-                   
+                    enableScrollBars();
                     console.log("complete")
                     console.timeEnd("Load Time");
              }
