--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,8 @@
         $(".foot").load("../footer.html");
         });
     </script>
-	<script src="../static/loader.js"></script>
+    <script src="../static/loader.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js"></script>
 </head>
 <body>
     <div id="mask">
@@ -23,8 +24,11 @@
     </div>
     <div class="wrapper" id="wrapper" style="grid-template-rows: 120px 100px auto auto !important">
         <div id="page-mask" class="hide" onclick="removeHide()"></div>
-		<div class="navbar"></div>
-		<div style="grid-column: 2; height:100%;"><h1 id="about" style="display: inline; text-align: center; font-size: 5vmin; margin: 0 auto; border-radius: 1vmin; padding: 1vmin;">&nbsp;&nbsp;About Us&nbsp;&nbsp;</h1></div>
+        <div class="navbar"></div>
+        <div class="container" style="grid-row: 1/3; grid-column: 1/4;">
+            <canvas class="particle"></canvas>
+        </div>
+		<div style="grid-row: 2; grid-column: 2; height:100%;"><h1 id="about" style="display: inline; text-align: center; font-size: 5vmin; margin: 0 auto;">&nbsp;&nbsp;About Us&nbsp;&nbsp;</h1></div>
         <div class="content" style="grid-template-rows: 1fr 1.5fr 1fr 3fr !important;">
             <div id="backgroundpic" style="grid-column: 1/3; grid-row: 1; z-index: 0; display: grid; grid-template-columns: 1fr 1fr; grid-template-rows: 2fr; background-image: url('../static/images/with 221w.jpg'); background-repeat: no-repeat; background-position: top center; background-attachment: scroll; background-size: cover;">
                 <div style="grid-column: 1; grid-row: 1; color:white; background-color: rgba(85, 85, 85, 0.322);">
@@ -84,6 +88,15 @@
             </div>
         </div>
         <div class="foot"></div>
+        <script>
+            window.onload = function() {
+                Particles.init({selector: '.particle',
+                color: ["#404B69", "#0099ff"],
+                connectParticles: true,
+                maxParticles: 200
+                });  
+            };
+        </script>
     </div>
 </body>
 </html>
