--- a/pages/about.html
+++ b/pages/about.html
@@ -30,7 +30,7 @@
         </div>
 		<div style="grid-row: 2; grid-column: 2; height:100%; z-index: 1;"><h1 id="about" style="display: inline; text-align: center; font-size: 5vmin; margin: 0 auto;">&nbsp;&nbsp;About Us&nbsp;&nbsp;</h1></div>
         <div class="content" style="grid-template-rows: 1fr 1.5fr 1fr 3fr !important;">
-            <div id="backgroundpic" style="grid-column: 1/3; grid-row: 1; z-index: 0; display: grid; grid-template-columns: 1fr 1fr; grid-template-rows: 2fr; background-image: url('../static/images/with 221w.jpg'); background-repeat: no-repeat; background-position: top center; background-attachment: scroll; background-size: cover;">
+            <div id="backgroundpic" style="grid-column: 1/3; grid-row: 1; z-index: 0; display: grid; grid-template-columns: 1fr 1fr; grid-template-rows: 2fr; background-image: url('../static/images/with 221w.jpg'); background-repeat: no-repeat; background-position: top center; background-attachment: scroll; background-size: cover; border-top: 2px solid rgb(35, 39, 42); border-bottom: 2px solid rgb(35, 39, 42);">
                 <div style="grid-column: 1; grid-row: 1; color:white; background-color: rgba(85, 85, 85, 0.322);">
                     <div id="competitive">
                         <h2 style="padding-left: 25%; padding-top: 450px; font-size: 20px; text-shadow: 5px 5px 2px#3f3f3fa6; text-align: left;">2405T (3388A)</h2>
