--- a/pages/about.html
+++ b/pages/about.html
@@ -19,12 +19,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js"></script>
 </head>
 <body>
-    <div id="mask" style="z-index: 2 !important;">
+    <div id="mask" style="z-index: 3 !important;">
         <div id="preload"></div>
     </div>
     <div class="wrapper" id="wrapper" style="grid-template-rows: 120px 100px auto auto !important">
         <div id="page-mask" class="hide" onclick="removeHide()"></div>
-        <div class="navbar"></div>
+        <div class="navbar" style="z-index: 2;"></div>
         <div class="container" style="grid-row: 1/3; grid-column: 1/4;">
             <canvas class="particle"></canvas>
         </div>
