mobile performance fix

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="wrapper" id="wrapper">
         <div id="page-mask" class="hide" onclick="removeHide()"></div>
-        <div class="navbar"></div>
+        <div class="navbar" id="navbar"></div>
         <div class="welcome">
             <div id="textlogo">
                 <h1 id="textlogoname">Toasted Robotics</h1>
