--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,16 +25,16 @@
         <div id="page-mask" class="hide" onclick="removeHide()"></div>
         <div class="navbar" style="z-index: 1;"></div>
         <div class="content" style="grid-template-rows: 1fr 1.6fr !important;">
-            <div id="backgroundpic" style="grid-column: 1/3; grid-row: 1; z-index: 0; display: grid; grid-template-columns: 1fr 1fr; grid-template-rows: 2fr; background-image: url('../static/images/arm gear.png'); background-repeat: no-repeat; background-position: center center; background-attachment: fixed; background-size: cover;">
+            <div id="backgroundpic3">
                 <div style="grid-column: 1; grid-row: 1; color:white; background-color: rgba(85, 85, 85, 0.322);">
-                    <div id="competitive">
-                        <h1 style="padding-left: 10%; padding-top: 140px; font-size: 10vmin; text-shadow: 3px 3px 2px#3f3f3fa6; text-align: left;">CONTACT US</h1>
+                    <div id="contact">
+                        <h1>CONTACT US</h1>
                     </div>
                 </div>
                 <div style="grid-column: 2; grid-row: 1;background-color: rgba(85, 85, 85, 0.322); ">
                 </div>
             </div>
-            <div style="grid-column: 1/3; grid-row: 2; grid-template-columns: 1fr 2fr 1fr; display: grid;">
+            <div id="cR1">
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSefn6k51sD0zAzTx9A_mtlrJfjKwMTngTlq17he7I1POwGVeg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" style="padding-top: 9vmin; grid-column: 2; min-height: 800px; min-width: 100%; height: auto; margin: 0 auto;">Loading…</iframe>
             </div>
         </div>
