--- a/pages/about.html
+++ b/pages/about.html
@@ -38,7 +38,7 @@
     <div id="mask" style="z-index: 3 !important;">
         <div id="preload"></div>
     </div>
-    <div class="wrapper" id="wrapper" style="grid-template-rows: 120px 100px auto auto !important">
+    <div class="wrapper wrapper_mobile" id="wrapper">
         <div id="page-mask" class="hide" onclick="removeHide()"></div>
         <div class="navbar" style="z-index: 2;"></div>
         <div class="container">
@@ -47,12 +47,10 @@
         <div style="grid-row: 2; grid-column: 2; height:100%; z-index: 1;">
             <h1 id="about">&nbsp;&nbsp;About Us&nbsp;&nbsp;</h1>
         </div>
-        <div class="content" style="grid-template-rows: 1fr 1.5fr 1fr 3fr !important;">
+        <div class="content content_mobile">
             <div id="backgroundpic2">
-                <div style="grid-column: 1; grid-row: 1; color:white; background-color: rgba(85, 85, 85, 0.322);">
-                    <div id="team2405">
-                        <h2>2405T (3388A)</h2>
-                    </div>
+                <div id="team2405">
+                    <h2>2405T (3388A)</h2>
                 </div>
                 <div id="team221">
                     <h2>221W (Alliance Partner)</h2>
@@ -61,7 +59,7 @@
             <div id="aR1">
                 <div id="aR1C1">
                     <p>Toasted Robotics (2405T) is a high performance, Calgary-based VRC team.  Our team consists of six 10th grade students from Sir Winston Churchill High School.  Formed in 2019 under the team number 3388A, Our team was based on the need for higher performance and greater opportunities, which were not readily achievable at our previous organization.  This year, we plan on ranking top 3 in Alberta and qualifying for the World Championships.  In addition to this, we are aiming to place in the top 100 worldwide in combined skills.  We plan on attending tournaments in Alberta and BC.  Overall, we plan on becoming a VRC oriented organization based in Alberta which will help to mentor and provide resources for younger students interested in STEM and robotics.</p>
-                    <div style="grid-column:3;">
+                    <div id="pic3388">
                         <img src="../static/images/3388a and 3388f.png" style="max-width:100%; height:auto; margin-top: 10vh; border: 10px solid rgb(35, 39, 42);">
                         <p style="font-size: 2vh;">2405T(3388A) with 3388F</p>
                     </div>
@@ -69,12 +67,12 @@
             </div>
             <div id="aR2">
                 <div id="aR2C1">
-                    <h3 style="text-align: left; font-size: 4vmin; margin: 0 auto; padding-top: 2.5vmin;">Mission</h3>
-                    <p style="text-align: left; font-size: 2vmin; margin:0 auto;">We provide young Canadians with opportunities to excel in the STEM field through the VEX platform.</p>
+                    <h3>Mission</h3>
+                    <p>We provide young Canadians with opportunities to excel in the STEM field through the VEX platform.</p>
                 </div>
                 <div id="aR2C2">
-                    <h3 style="text-align: left; font-size: 4vmin; margin: 0 auto; padding-top: 2vmin;">Vision</h3>
-                    <p style="text-align: left; font-size: 2vmin; margin:0 auto;">To be a significant organization in the VEX community which provides exemplary robotics education to the Greater Calgary region, and empowers Canadians of all backgrounds.</p>
+                    <h3>Vision</h3>
+                    <p>To be a significant organization in the VEX community which provides exemplary robotics education to the Greater Calgary region, and empowers Canadians of all backgrounds.</p>
                 </div>
             </div>
             <div id="aR3">
