--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Toasted Robotics</title>
+    <meta property="og:site_name" content="Toasted Robotics">
+    <meta property="og:url" content="https://toastedrobotics.github.io">
+    <meta property="og:title" content="Home">
+    <meta property="og:description" content="The home of 2405T">
+    <meta property="og:type" content="website">
+    <meta name="og:image" itemprop="image" content="../static/images/logo.svg">
     <link href="../static/portable.css" media="screen and (max-aspect-ratio: 5/6)" rel="stylesheet">
 	<link href="../static/desktop.css" media="screen and (min-aspect-ratio: 5/6)" rel="stylesheet">
     <link rel="shortcut icon" href="../static/images/favicon.ico">
