--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Toasted Robotics</title>
     <meta property="og:site_name" content="Toasted Robotics">
     <meta property="og:url" content="https://toastedrobotics.github.io">
-    <meta property="og:title" content="Home">
-    <meta property="og:description" content="The home of 2405T">
+    <meta property="og:title" content="Toasted Robotics | Home">
+    <meta property="og:description" content="Toasted Robotics (2405T) is a high performance, Calgary-based VRC team. Our team consists of six 10th grade students from Sir Winston Churchill High School.">
     <meta property="og:type" content="website">
-    <meta name="og:image" itemprop="image" content="../static/images/logo.svg">
+    <meta name="og:image" itemprop="image" content="../static/images/favicon.ico">
     <link href="../static/portable.css" media="screen and (max-aspect-ratio: 5/6)" rel="stylesheet">
 	<link href="../static/desktop.css" media="screen and (min-aspect-ratio: 5/6)" rel="stylesheet">
     <link rel="shortcut icon" href="../static/images/favicon.ico">
