--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Toasted Robotics | Home">
     <meta property="og:description" content="Toasted Robotics (2405T) is a high performance, Calgary-based VRC team. Our team consists of six 10th grade students from Sir Winston Churchill High School.">
     <meta property="og:type" content="website">
-    <meta name="og:image" itemprop="image" content="../static/images/favicon.ico">
+    <meta name="og:image" itemprop="image" content="https://cdn.discordapp.com/attachments/704131461904859227/722224862956879982/toasted_logo_2D_Water_Alliance_Special_thick_lines_x2.png">
     <link href="../static/portable.css" media="screen and (max-aspect-ratio: 5/6)" rel="stylesheet">
 	<link href="../static/desktop.css" media="screen and (min-aspect-ratio: 5/6)" rel="stylesheet">
     <link rel="shortcut icon" href="../static/images/favicon.ico">
