--- a/navbar.html
+++ b/navbar.html
@@ -4,6 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Toasted Robotics</title>
+	<meta property="og:site_name" content="Toasted Robotics">
+    <meta property="og:url" content="https://toastedrobotics.github.io">
+    <meta property="og:title" content="Toasted Robotics">
+    <meta property="og:description" content="Toasted Robotics (2405T) is a high performance, Calgary-based VRC team. Our team consists of six 10th grade students from Sir Winston Churchill High School.">
+    <meta property="og:type" content="website">
+    <meta name="og:image" itemprop="image" content="https://cdn.discordapp.com/attachments/704131461904859227/722229352317583400/toasted_logo_curved.png">
 	<link href="../static/nav-mobile.css" media="screen and (max-aspect-ratio: 5/6)" rel="stylesheet">
 	<link href="../static/nav.css" media="screen and (min-aspect-ratio: 5/6)" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Sulphur+Point&display=swap" rel="stylesheet">
