--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Toasted Robotics</title>
     <meta property="og:site_name" content="Toasted Robotics">
-    <meta property="og:url" content="https://toastedrobotics.github.io">
+    <meta property="og:url" content="https://toastedrobotics.github.io/pages/contact.html">
     <meta property="og:title" content="Toasted Robotics | Contact Us">
     <meta property="og:description" content="Toasted Robotics (2405T) is a high performance, Calgary-based VRC team. Our team consists of six 10th grade students from Sir Winston Churchill High School.">
     <meta property="og:type" content="website">
